# MaraGl

./: .gitignore  .gitmodules  BONE_SEQUENCER_API.md  CMakeLists.txt  ICON_FONTS_GUIDE.md  README.md  TIMELINE_PANEL_GUIDE.md  imgui.ini
core/: CMakeLists.txt
core/src/Mara/: AnimationAsset.cpp  Animator.cpp  AppLayer.cpp  AssetLoader.cpp  EBO.cpp  EditorTimelinePanel.cpp  Entity.cpp  Framebuffer.cpp  HierarchyPanel.cpp  ImGuiLayer.cpp  Input.cpp  InspectorPanel.cpp  LightGizmo.cpp  LoadingPanel.cpp  Mesh.cpp  Model.cpp  ModelLoaderPanel.cpp  PerspectiveCamera.cpp  Plane.cpp  Renderer.cpp  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSettingsPanel.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  Timer.cpp  Transform.cpp  VAO.cpp  VBO.cpp  Window.cpp
core/src/Mara/include/: AnimationAsset.h  AnimationComponent.h  Animator.h  AppLayer.h  AssetLoader.h  Camera.h  Component.h  ComponentRegistry.h  EBO.h  EditorCamera.h  EditorPanel.h  EditorTimelinePanel.h  Entity.h  Framebuffer.h  HierarchyPanel.h  IconDefs.h  IconFontExample.h  ImGuiFontSetup.h  ImGuiLayer.h  Input.h  InspectorPanel.h  LightComponent.h  LightGizmo.h  Logger.h  Mesh.h  MeshComponent.h  Model.h  ModelLoaderPanel.h  NameComponent.h  PanelManager.h  PerspectiveCamera.h  Plane.h  Renderer.h  Scene.h  ScenePanel.h  SceneSerializer.h  SceneSettingsPanel.h  Shader.h  Skybox.h  Texture.h  (+6 more)
editor/: CMakeLists.txt  README.md
editor/src/: AppLayer.cpp  AppLayer.h
editor/src/layers/: ImGuiLayer.cpp  ImGuiLayer.h
editor/src/panels/: AnimationGraphPanel.cpp  AnimationGraphPanel.h  EditorTimelinePanel.cpp  EditorTimelinePanel.h  HierarchyPanel.cpp  InspectorPanel.cpp  LoadingPanel.cpp  LoadingPanel.h  ModelLoaderPanel.cpp  PanelManager.h  ScenePanel.cpp  ScenePanel.h  SceneSettingsPanel.cpp  SceneSettingsPanel.h
resources/Animations/: Draw A Great Sword 2.fbx  Drop Kick.fbx  Fast Run.fbx  Flying Knee Punch Combo.fbx  Flying Shoulder Throw.fbx  Pistol Run.fbx  Run Backward.fbx  Run Look Back.fbx  Run To Rolling.fbx  Running Arc.fbx  Running Backward Arc.fbx  Running Dive Roll.fbx  Running Right Turn.fbx  Running Slide.fbx  Running left Arc.fbx  Shoved Reaction With Spin.fbx  Slow Run.fbx  Spin Flip Kick.fbx  Thriller Part 3.fbx  Two Handed Sword Death.fbx  Walking.fbx  Wall Run.fbx
resources/fonts/Roboto_Mono/: README.txt
resources/fonts/Source_Code_Pro/: README.txt
resources/shaders/: basic.frag  basic.vert  grid.frag  grid.vert  skybox.frag  skybox.vert  skybox_equirect.frag  unlit.frag  unlit.vert
sandbox/: CMakeLists.txt  README.md
sandbox/src/: SandboxApp.cpp  SandboxApp.h  main.cpp
scenes/: Housejson  default_animation_scene.json  example_scene.json  mode1.json  person_animation.json  scene.json  scene1.json  scene3.json
